# peanut

./: .buildinfo  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Peanut.cpp  README.md  genindex.html  index.html  longmatstr.h  main.cpp  objects.inv  peanut.cpp  qodana.yaml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: cmake.yml  codeql.yml  docs.yml  qodana_code_quality.yml  unittest.yml  unittest_macos.yml  unittest_macos_appleclang.yml  unittest_macos_clang.yml  unittest_ubuntu.yml  unittest_windows.yml  unittest_windows_clang.yml  unittest_windows_msvc.yml
Peanut/impl/: common.h  matrix.h  matrix_binary_op.h  matrix_type_traits.h  matrix_unary_op.h
Peanut/impl/binary_expr/: matrix_div_scalar.h  matrix_mult.h  matrix_mult_scalar.h  matrix_subtract.h  matrix_sum.h
Peanut/impl/unary_expr/: adjugate.h  block.h  cast.h  cofactor.h  inverse.h  minor.h  submatrix.h  transpose.h
_sources/: index.rst.txt
bruteforce-matrix/: matrix.h
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
include/: Matrix.h  matrix.h
include/Peanut/: Peanut.h
include/Peanut/impl/: arithmetic.h  common.h  matrix.h  matrix_binary_op.h  matrix_type_traits.h  matrix_unary_op.h
include/Peanut/impl/binary_expr/: matrix_div_scalar.h  matrix_ediv.h  (+5 more)
include/impl/: common.h  matrix.h  matrix_binary_op.h  matrix_op.h  matrix_type_traits.h  matrix_unary_op.h
test/: CMakeLists.txt  README.md  benchmark.cpp  main.cpp  test_matrix.cpp  test_matrix_binary_op.cpp  test_matrix_unary_op.cpp
(+10 files in other folders)
